feat: update website

--- a/src/components/footer.less
+++ b/src/components/footer.less
@@ -3,6 +3,22 @@
   height: 241px;
   background: #000000;
   position: relative;
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+  a:link {
+    color: inherit;
+  }
+  a:visited {
+    color: inherit;
+  }
+  a:hover {
+    color: inherit;
+  }
+  a:active {
+    color: inherit;
+  }
 }
 
 .logo {
