--- a/src/components/demo.less
+++ b/src/components/demo.less
@@ -23,13 +23,16 @@
   height: 460px;
   background: #242830;
   border-radius: 20px;
-  margin: 66px auto;
+  margin: 66px auto 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
+  img{
+    height: 100%;
+  }
 }
 .demoList {
-  display: flex;
+  display: none;
   margin: 0 auto;
   width: 80%;
   justify-content: space-between;
