--- a/src/styles/namespaceDetail.scss
+++ b/src/styles/namespaceDetail.scss
@@ -1,9 +1,48 @@
 .namespace-detail {
-	.ns-collections {
-		display: flex;
-		> div {
-			border: 1px solid #c6c0c0;
-			padding: 7px 20px;
-		}
-	}
+    .ant-tabs-tabpane {
+        padding: 20px;
+    }
+    .ns-collections {
+        display: flex;
+        height: 450px;
+        border: 1px solid #c6c0c0;
+        border-radius: 8px;
+        > div {
+            width: 300px;
+            border-right: 1px solid #c6c0c0;
+            &:last-child {
+                border-right: 0;
+            }
+        }
+        .anticon-right {
+            display: none;
+        }
+        .active {
+            background-color: #d9d9d9;
+            .anticon-right {
+                display: block;
+                position: relative;
+                float: right;
+                top: 4px;
+            }
+        }
+    }
+    .docs-panel {
+        .anticon-right {
+            display: none;
+        }
+        .active {
+            background-color: #d9d9d9;
+            .anticon-right {
+                display: block;
+                position: relative;
+                float: right;
+                top: 4px;
+            }
+        }
+    }
+    .docs-detail {
+        padding: 7px;
+        flex: 1;
+    }
 }
