--- a/src/App.scss
+++ b/src/App.scss
@@ -1,31 +1,34 @@
 #root {
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	background-color: #f0f2f5;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: #f0f2f5;
 }
 .layout {
-	.logo {
-		color: #fff;
-		float: left;
-		margin-right: 20px;
-	}
+    .logo {
+        color: #fff;
+        float: left;
+        margin-right: 20px;
+    }
 }
 
 .header {
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
+    .account {
+        color: #fff;
+    }
 }
 .container {
-	padding: 20px;
+    padding: 20px;
 }
 .site-layout-content {
-	display: flex;
+    display: flex;
 }
 
 .ant-spin-nested-loading {
-	height: 100%;
-	.ant-spin-container {
-		height: 100%;
-	}
+    height: 100%;
+    .ant-spin-container {
+        height: 100%;
+    }
 }
