--- a/src/styles/namespaceDetail.scss
+++ b/src/styles/namespaceDetail.scss
@@ -8,7 +8,6 @@
         border: 1px solid #c6c0c0;
         border-radius: 8px;
         > div {
-            width: 300px;
             border-right: 1px solid #c6c0c0;
             &:last-child {
                 border-right: 0;
@@ -27,7 +26,11 @@
             }
         }
     }
+    .collections-panel {
+        width: 300px;
+    }
     .docs-panel {
+        width: 350px;
         .anticon-right {
             display: none;
         }
